--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,52 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{pihajoki:2015,
+  author="Pihajoki, P.",
+  title="Explicit methods in extended phase space for inseparable Hamiltonian problems",
+  journal="Celestial Mechanics and Dynamical Astronomy",
+  year="2015",
+  month="Mar",
+  day="01",
+  volume="121",
+  number="3",
+  pages="211--231"
+}
+
+@article{hellstrom:2010,
+  author="Hellstr{\"o}m, C. and Mikkola, S.",
+  title="Explicit algorithmic regularization in the few-body problem for velocity-dependent perturbations",
+  journal="Celestial Mechanics and Dynamical Astronomy",
+  year="2010",
+  month="Feb",
+  day="01",
+  volume="106",
+  number="2",
+  pages="143--156"
+}
+
+@article{richardson:1911,
+  title={IX. The approximate arithmetical solution by finite differences of physical problems involving differential equations, with an application to the stresses in a masonry dam},
+  author={Richardson, L.~F.},
+  journal={Philosophical Transactions of the Royal Society of London. Series A, Containing Papers of a Mathematical or Physical Character},
+  volume={210},
+  number={459-470},
+  pages={307--357},
+  year={1911},
+  publisher={The Royal Society London}
+}
+
+@article{richardson:1927,
+  title={VIII. The deferred approach to the limit},
+  author={Richardson, L.~F. and Gaunt, J.~A.},
+  journal={Philosophical Transactions of the Royal Society of London. Series A, containing papers of a mathematical or physical character},
+  volume={226},
+  number={636-646},
+  pages={299--361},
+  year={1927},
+  publisher={The Royal Society London}
+}
+
 @book{hairer:2008,
   author={Hairer, E. and N{\o}rsett, S.~P. and Wanner, G.},
   title={Solving Ordinary Differential Equations I: Nonstiff Problems},
@@ -97,7 +143,7 @@ publisher = {Cambridge University Press},
   year={1966},
   month={Mar},
   volume={8},
-  pages={1-13},
+  pages={1--13},
 }
 
 @article{gragg:1965,
@@ -105,7 +151,7 @@ publisher = {Cambridge University Press},
   title={On extrapolation algorithms for ordinary initial value problems},
   journal={Journal of the Society for Industrial and Applied Mathematics, Series B: Numerical Analysis},
   volume={2},
-  pages={384-403},
+  pages={384--403},
   year={1965},
 }
 
@@ -117,7 +163,7 @@ publisher = {Cambridge University Press},
      year = 1999,
     month = nov,
    volume = 118,
-    pages = {2532-2541},
+    pages = {2532--2541},
       doi = {10.1086/301102},
    adsurl = {https://ui.adsabs.harvard.edu/abs/1999AJ....118.2532P},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -131,7 +177,7 @@ publisher = {Cambridge University Press},
      year = 1993,
     month = nov,
    volume = 57,
-    pages = {439-459},
+    pages = {439--459},
       doi = {10.1007/BF00695714},
    adsurl = {https://ui.adsabs.harvard.edu/abs/1993CeMDA..57..439M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -147,7 +193,7 @@ archivePrefix = "arXiv",
      year = 2008,
     month = jun,
    volume = 135,
-    pages = {2398-2405},
+    pages = {2398--2405},
       doi = {10.1088/0004-6256/135/6/2398},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2008AJ....135.2398M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -162,7 +208,7 @@ archivePrefix = "arXiv",
      year = 2006,
     month = oct,
    volume = 372,
-    pages = {219-223},
+    pages = {219--223},
       doi = {10.1111/j.1365-2966.2006.10854.x},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.372..219M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -176,7 +222,7 @@ archivePrefix = "arXiv",
      year = 2002,
     month = dec,
    volume = 84,
-    pages = {343-354},
+    pages = {343--354},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2002CeMDA..84..343M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -189,7 +235,7 @@ archivePrefix = "arXiv",
      year = 1999,
     month = aug,
    volume = 74,
-    pages = {287-295},
+    pages = {287--295},
       doi = {10.1023/A:1008368322547},
    adsurl = {https://ui.adsabs.harvard.edu/abs/1999CeMDA..74..287M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -221,7 +267,7 @@ archivePrefix = {arXiv},
      year = 2005,
     month = dec,
    volume = 364,
-    pages = {1105-1134},
+    pages = {1105--1134},
       doi = {10.1111/j.1365-2966.2005.09655.x},
    adsurl = {https://ui.adsabs.harvard.edu/abs/2005MNRAS.364.1105S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -240,7 +286,7 @@ archivePrefix = {arXiv},
          year = "2009",
         month = "Jun",
        volume = {698},
-        pages = {198-221},
+        pages = {198--221},
           doi = {10.1088/0004-637X/698/1/198},
 archivePrefix = {arXiv},
        eprint = {0903.4897},
@@ -351,7 +397,7 @@ archivePrefix = {arXiv},
      year = 1980,
     month = sep,
    volume = 287,
-    pages = {307-309},
+    pages = {307--309},
       doi = {10.1038/287307a0},
    adsurl = {http://adsabs.harvard.edu/abs/1980Natur.287..307B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -366,7 +412,7 @@ archivePrefix = {arXiv},
        series = {American Institute of Physics Conference Series},
        volume = {686},
         month = "Oct",
-        pages = {201-210},
+        pages = {201--210},
           doi = {10.1063/1.1629432},
 archivePrefix = {arXiv},
        eprint = {astro-ph/0212270},
@@ -384,7 +430,7 @@ archivePrefix = {arXiv},
      year = 2006,
     month = aug,
    volume = 58,
-    pages = {743-752},
+    pages = {743--752},
       doi = {10.1093/pasj/58.4.743},
    adsurl = {http://adsabs.harvard.edu/abs/2006PASJ...58..743F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -398,7 +444,7 @@ archivePrefix = {arXiv},
      year = 1989,
     month = aug,
    volume = 239,
-    pages = {549-569},
+    pages = {549--569},
       doi = {10.1093/mnras/239.2.549},
    adsurl = {http://adsabs.harvard.edu/abs/1989MNRAS.239..549W},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -412,7 +458,7 @@ archivePrefix = {arXiv},
          year = "1996",
         month = "Jul",
        volume = {1},
-        pages = {35-56},
+        pages = {35--56},
           doi = {10.1016/S1384-1076(96)00003-6},
 archivePrefix = {arXiv},
        eprint = {astro-ph/9601092},
@@ -483,7 +529,7 @@ archivePrefix = {arXiv},
      year = 1938,
     month = jan,
    volume = 39,
-    pages = {65-100},
+    pages = {65--100},
    adsurl = {http://adsabs.harvard.edu/abs/1938AnMat..39...65E},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -507,7 +553,7 @@ booktitle = {Dynamical Evolution of Dense Stellar Systems},
    series = {IAU Symposium},
    volume = 246,
     month = may,
-    pages = {218-227},
+    pages = {218--227},
       doi = {10.1017/S1743921308015639},
    adsurl = {http://adsabs.harvard.edu/abs/2008IAUS..246..218M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -590,7 +636,7 @@ archivePrefix = "arXiv",
      year = 2001,
     month = apr,
    volume = 369,
-    pages = {574-588},
+    pages = {574--588},
       doi = {10.1051/0004-6361:20010127},
    adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...369..574V},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -628,7 +674,7 @@ archivePrefix = {arXiv},
      year = 2009,
     month = dec,
    volume = 148,
-    pages = {53-69},
+    pages = {53--69},
       doi = {10.1007/s11214-009-9524-7},
    adsurl = {http://adsabs.harvard.edu/abs/2009SSRv..148...53E},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -686,7 +732,7 @@ archivePrefix = {arXiv},
          year = 2005,
         month = Jul,
        volume = {628},
-        pages = {246-259},
+        pages = {246--259},
           doi = {10.1086/430667},
 archivePrefix = {arXiv},
        eprint = {astro-ph/0502129},
@@ -704,7 +750,7 @@ archivePrefix = "arXiv",
      year = 2013,
     month = aug,
    volume = 51,
-    pages = {511-653},
+    pages = {511--653},
       doi = {10.1146/annurev-astro-082708-101811},
    adsurl = {http://adsabs.harvard.edu/abs/2013ARA%26A..51..511K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -731,7 +777,7 @@ archivePrefix = "arXiv",
      year = 2005,
     month = dec,
    volume = 634,
-    pages = {1093-1102},
+    pages = {1093--1102},
       doi = {10.1086/497023},
    adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...634.1093G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -773,7 +819,7 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
    volume = 238,
    eprint = {astro-ph/0612312},
     month = apr,
-    pages = {3-12},
+    pages = {3--12},
       doi = {10.1017/S1743921307004590},
    adsurl = {http://adsabs.harvard.edu/abs/2007IAUS..238....3C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
@@ -787,7 +833,7 @@ booktitle = {Black Holes from Stars to Galaxies -- Across the Range of Masses},
      year = 2002,
     month = nov,
    volume = 74,
-    pages = {1015-1071},
+    pages = {1015--1071},
       doi = {10.1103/RevModPhys.74.1015},
    adsurl = {http://adsabs.harvard.edu/abs/2002RvMP...74.1015W},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
