--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,24 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{zhang:2019,
+       author = {{Zhang}, T. and {Liao}, S. and {Li}, M. and {Gao}, L.},
+        title = "{The optimal gravitational softening length for cosmological N-body simulations}",
+      journal = {MNRAS},
+     keywords = {methods: numerical, dark matter, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = "2019",
+        month = "Jul",
+       volume = {487},
+       number = {1},
+        pages = {1227-1232},
+          doi = {10.1093/mnras/stz1370},
+archivePrefix = {arXiv},
+       eprint = {1810.07055},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.487.1227Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{pihajoki:2015,
   author="Pihajoki, P.",
   title="Explicit methods in extended phase space for inseparable Hamiltonian problems",
